# FlutterSerial

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/android/serialport/: SerialPort.java  SerialPortFinder.java
android/src/main/java/android/serialport/port/: BaseReader.java  LogInterceptorSerialPort.java  SerialApi.java  SerialApiManager.java  TransformUtils.java
android/src/main/java/com/example/flutterserial/: CustomEventHandler.java  FlutterserialPlugin.java  OpenCommunication.java
android/src/test/java/com/example/flutterserial/: FlutterserialPluginTest.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/flutterserial_example/: MainActivity.java
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: flutterserial.dart  flutterserial_method_channel.dart  flutterserial_platform_interface.dart
test/: flutterserial_method_channel_test.dart  flutterserial_test.dart
